# learn_rust

./: Cargo.toml
src/: blockexpr.rs  borrow.rs  datatype.rs  destructure.rs  function.rs  life_cycle.rs  macro_rules.rs  main.rs  main1.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7.rs  non_lexical_lifetime.rs  shadow.rs  trait.rs  type_infer.rs
src/api/: mod.rs  prods.rs  stock.rs
src/models/: book.rs  mod.rs  user.rs
