[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main1"
path = "src/main1.rs"

[[bin]]
name = "shadow"
path = "src/shadow.rs"

[[bin]]
name = "type_infer"
path = "src/type_infer.rs"

[[bin]]
name = "datatype"
path = "src/datatype.rs"
