[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main1"
path = "src/main1.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3.rs"

[[bin]]
name = "shadow"
path = "src/shadow.rs"

[[bin]]
name = "type_infer"
path = "src/type_infer.rs"

[[bin]]
name = "datatype"
path = "src/datatype.rs"

[[bin]]
name = "blockexpr"
path = "src/blockexpr.rs"

[[bin]]
name = "function"
path = "src/function.rs"

[[bin]]
name = "trait"
path = "src/trait.rs"

[[bin]]
name = "destructure"
path = "src/destructure.rs"

[[bin]]
name = "life_cycle"
path = "src/life_cycle.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "non_lexical_lifetime"
path = "src/non_lexical_lifetime.rs"
